--- a/_data/data.yml
+++ b/_data/data.yml
@@ -11,7 +11,7 @@ basic:
 
 contact:
   # location: Beijing, China  # location, text or markdown link syntax
-  email: 2021212063023@cuc.edu.cn    # email address
+  email: yileli_zoo4@163.com    # email address
   phone: +86-155-0122-5688  # phone number, the format is "+[Country Code] [Area Code (if applicable)] [Local Phone Number]"
   # website: example.com      # site link without schema, like example.com, will automatically prepend "https://"
 
