--- a/_data/data.yml
+++ b/_data/data.yml
@@ -87,7 +87,7 @@ experience:
   #   The experiences section in a resume is a section where you list your previous work experiences and accomplishments. It typically includes information about your previous job titles, companies you worked for, the dates of your employment, and your key responsibilities and achievements in each role. This section is important because it gives potential employers a sense of your work history and the skills and expertise you have developed over time. It can also help demonstrate your ability to contribute value to a new organization based on your past achievements.
 
   items:
-    - company: Mathematical Contest in Modeling, Meritorious Winner
+    - company: Interdisciplinary Contest in Modeling, Meritorious Winner
       # link: '#'
       # tags: Full-time
       date: 02/2024
@@ -97,7 +97,7 @@ experience:
         + Independently completed Problems 2 and 3, collected extensive data from multiple sources for modeling, and innovatively utilized large models to simulate expert scoring.
     - company: China Collegiate Algorithm Design & Programming Challenge Contest, Bronze Medal
       date: 03/2024
-    - company: MathorCup Collegiate Mathematical Modeling Challenge - Big Data Competition, Second Prize
+    - company: MathorCup Collegiate Mathematical Modeling Challenge, Second Prize
       date: 12/2023
       description: |
     - company: Network Security Track of Blue Bridge Cup Competition, Third Prize 
@@ -107,7 +107,7 @@ skill:
   order: 7
   title: Skills&Languages
   description: |
-    + Languages : Madarian(native), English(proficient), Japanese(basic)
+    + Languages : Madarian(native), English(proficient)
     + Skills: Python, C, Pytorch, vue.js, flask
 
 publication:
@@ -155,7 +155,7 @@ award:
       # link: '#'
     - name: Excellent League Member
       date: 2022/23
-      
+
     - name: Outstanding Student Union Contributor
       date: 2021/22, 2022/23
 
