--- a/_data/data.yml
+++ b/_data/data.yml
@@ -82,7 +82,7 @@ experience:
   order: 4
   title: Competition Experiences
   description: |
-    I actively seek opportunities in competitions to enhance my knowledge and foster personal growth, and have been fortunate to receive recognition in every competition I participated in.
+    I actively seek opportunities in competitions to foster personal growth, and have been fortunate to receive recognition in every competition I participated in.
   # description: |
   #   The experiences section in a resume is a section where you list your previous work experiences and accomplishments. It typically includes information about your previous job titles, companies you worked for, the dates of your employment, and your key responsibilities and achievements in each role. This section is important because it gives potential employers a sense of your work history and the skills and expertise you have developed over time. It can also help demonstrate your ability to contribute value to a new organization based on your past achievements.
 
@@ -94,11 +94,13 @@ experience:
       # role: Backend Developer
       # location: Beijing
       description: |
-        + Independently completed Problems 2 and 3, collected extensive data from multiple sources for modeling, and innovatively utilized large models to simulate expert scoring.
+        + Modeling and discussion on extreme weather from the insurance industry, the construction industry, and cultural preservation. Independently completed Problems 2 and 3, collected extensive data from multiple sources for modeling, and innovatively utilized large models to simulate expert scoring.
     - company: China Collegiate Algorithm Design & Programming Challenge Contest, Bronze Medal
       date: 03/2024
     - company: MathorCup Collegiate Mathematical Modeling Challenge, Second Prize
       date: 12/2023
+      description: |
+        + Building models for order forecasting tasks using LSTM and XGBoost methods.
       description: |
     - company: Network Security Track of Blue Bridge Cup Competition, Third Prize 
       date: 05/2024
