--- a/_data/data.yml
+++ b/_data/data.yml
@@ -94,7 +94,7 @@ experience:
       # role: Backend Developer
       # location: Beijing
       description: |
-        + Modeling and discussion on extreme weather from the insurance industry, the construction industry, and cultural preservation. Independently completed Problems 2 and 3, collected extensive data from multiple sources for modeling, and innovatively utilized large models to simulate expert scoring.
+        + Modeling and discussion on extreme weather from the insurance industry, the construction industry, and cultural preservation.
     - company: China Collegiate Algorithm Design & Programming Challenge Contest, Bronze Medal
       date: 03/2024
     - company: MathorCup Collegiate Mathematical Modeling Challenge, Second Prize
